tests/rosetta/out/Java/bell-numbers.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/bell-numbers.mochi:19:22: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/bell-numbers.mochi:19:22

 19 |     tri[i][0] = tri[i-1][i-2]
    |                      ^

help:
  Parse error occurred. Check syntax near this location.